Small fixes. Removed horizontal scrollbar from auth page. Removed pass help from Sign in from.

--- a/src/front-end/components/App/App.css
+++ b/src/front-end/components/App/App.css
@@ -6,6 +6,7 @@ html, body, #root{
     height: 100%;
     padding-left: 0;
     padding-right: 0;
+    overflow-x: hidden;
 }
 
 .close {
